# neural-amp-modeler-parametric

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: python-package.yml
colab/: active_learning_round.ipynb  parametric_hypernetwork_training.ipynb
docs/: active_learning_usage.md
docs/source/: conf.py  installation.rst
docs/source/tutorials/: packed-training.rst
nam/: cli.py  data.py
nam/models/: __init__.py  _from_nam.py  base.py  factory.py
nam/models/parametric/: __init__.py  _active_learning_params.py  _base.py  _concat_lstm.py  _dataset.py  _export.py  _hypernet.py  _hyperwavenet.py  _loader.py  _model.py  _spec.py  catnets.py  hyper_net.py  params.py
nam/models/wavenet/: _layer_array.py  _packed_wavenet.py  _wavenet.py
nam/train/: active_learning.py  core.py  full.py  lightning_module.py  parametric.py
nam/train/gui/: __init__.py  _parametric.py  parametric.py
nam_full_configs/active_learning/: data.json  learning.json  model.json
nam_full_configs/parametric/: TRAINING_HANDOFF.md  data.json  generate_parametric_wavenet_standard.py  learning.json  model.json  parametric_wavenet_standard.nam  train_parametric_colab2.ipynb
scripts/: active_learn.py  analyze_training_log.py  make_starter_settings.py
tests/parametric/: __init__.py  test_active_learning.py  test_active_learning_configs.py  test_active_learning_params.py  test_base.py  test_dataset.py  test_example_configs.py  test_export.py  test_full.py  test_gui_parametric_options.py  test_hypernet.py  test_hyperwavenet.py  test_integration.py  test_log_analysis_script.py  test_make_starter_settings.py  test_model.py  test_ordinary_compat.py  test_registration.py  test_spec.py  test_train.py
tests/test_nam/: test_cli_parametric.py  test_data.py
tests/test_nam/test_models/: test_packed_wavenet.py  test_parametric_catwavenet.py
(+3 files in other folders)
